Use Stream's toList()