@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2019 the original author or authors.
+ * Copyright 2016-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -68,7 +67,7 @@ class InMemoryReleaseRepository implements ReleaseRepository {
 	public List<Release> findAllInPeriod(Date start, Date end) {
 		this.lock.readLock().lock();
 		try {
-			return this.releases.stream().filter(isWithinPeriod(start, end)).collect(Collectors.toList());
+			return this.releases.stream().filter(isWithinPeriod(start, end)).toList();
 		}
 		finally {
 			this.lock.readLock().unlock();
