@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2019 the original author or authors.
+ * Copyright 2016-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.spring.calendar.release.Release.Status;
 
@@ -69,7 +68,7 @@ class ReleaseEventsController {
 				event.put("backgroundColor", "#d14");
 			}
 			return event;
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	@ExceptionHandler
