@@ -19,7 +19,6 @@ package io.spring.calendar.release;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -57,7 +56,7 @@ class ReleaseUpdater {
 			.stream()
 			.flatMap((releaseSchedule) -> releaseSchedule.getReleases().stream())
 			.map(this::applyNameAlias)
-			.collect(Collectors.toList());
+			.toList();
 		updateReleases(releases);
 		log.info("Releases updated");
 	}
